Enable to create model from remote wsdl